# VidSynth-AI

./: .gitignore  LICENSE  README.md  pyproject.toml
src/vidsynthai/: llm_client.py  main.py  utils.py
src/vidsynthai/animation/: utils.py
src/vidsynthai/configs/: model.yaml  prompts.yaml
src/vidsynthai/tts/: tts_client.py  utils.py
